# aviutl-whisper

./: .gitignore  README.md  build.spec  main.py  pyproject.toml
.github/workflows/: ci.yml
spec/tests/: 00-overview.md  01-app-startup.md  02-file-selection.md  03-transcription.md  04-segment-editing.md  05-exo-settings.md  06-preview.md  07-speaker-settings.md  08-project-management.md  09-export.md  10-undo-redo.md  11-keyboard-shortcuts.md
src/aviutl_whisper/: api.py  app.py  audio.py  diarizer.py  exporter.py  models.py  settings.py  transcriber.py
src/aviutl_whisper/web/: app.js  index.html  style.css
tests/: test_backend.py
tests/e2e/: conftest.py  helpers.py  test_app_startup.py  test_exo_settings.py  test_export.py  test_file_selection.py  test_keyboard_shortcuts.py  test_preview.py  test_project_management.py  test_segment_editing.py  test_speaker_settings.py  test_transcription.py  test_undo_redo.py
tests/e2e/fixtures/: segments.json
